# OS-in-Rust

./: README.md
rust_os/: Cargo.toml
rust_os/.cargo/: config.toml
rust_os/src/: main.rs
