[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"
authors = ["Robert Pearce | robertbdpearce@gmail.com"]

# set strategy to abort for dev profile
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# set strategy to abort for release profile
[profile.release]
panic = "abort" # disable stack unwinding on panic

# implements a basic BIOS bootloader with no C dependencies
[dependencies]
bootloader = "0.9"